# spirit_fruit_mcve

./: .gitmodules  CMakeLists.txt  common.h  fruit.cpp  fruit.h  main.cpp
